--- a/Titanic_data_Analisis.ipynb
+++ b/Titanic_data_Analisis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "10zI2XdQvYRWrmX-RxxGjAW-WuzH6Yzl1",
-      "authorship_tag": "ABX9TyMF5QVf4zHlso3gguSbNcU9",
+      "authorship_tag": "ABX9TyMtS0y4AoMrwaVfuCk7Bc0C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,11 +46,14 @@
       },
       "outputs": [],
       "source": [
+        "# tratar datos\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "\n",
-        "# predicciónes\n",
+        "# aleatorizar y separar data\n",
         "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "# 3 tipos de predicciones\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.svm import SVC\n",
         "from sklearn.neighbors import KNeighborsClassifier"
