editado una parte de análisis

--- a/Titanic_data_Analisis.ipynb
+++ b/Titanic_data_Analisis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "10zI2XdQvYRWrmX-RxxGjAW-WuzH6Yzl1",
-      "authorship_tag": "ABX9TyNJCbX2Q1LTKL/StuDzkjQk",
+      "authorship_tag": "ABX9TyPx46LnOIm3EPdZriuCaiua",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,7 +82,7 @@
       "metadata": {
         "id": "8cSbA1Ie9-Qa"
       },
-      "execution_count": 9,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -95,7 +95,7 @@
       "metadata": {
         "id": "XFkrqKTw-GNq"
       },
-      "execution_count": 10,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -114,9 +114,9 @@
           "height": 429
         },
         "id": "EHL_MDw8BXuJ",
-        "outputId": "7de75ad0-1c9f-4e7f-e202-f65801f5c0bd"
+        "outputId": "a371dea5-beef-4b40-cdaf-f6e8a1de7f3a"
       },
-      "execution_count": 14,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,7 +145,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a241d476-3083-43b0-b2a5-5c961985a10c\">\n",
+              "  <div id=\"df-5d9c5177-5e6a-4ada-b9ba-e6fd47ed5408\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -252,7 +252,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a241d476-3083-43b0-b2a5-5c961985a10c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5d9c5177-5e6a-4ada-b9ba-e6fd47ed5408')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -303,12 +303,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a241d476-3083-43b0-b2a5-5c961985a10c button.colab-df-convert');\n",
+              "          document.querySelector('#df-5d9c5177-5e6a-4ada-b9ba-e6fd47ed5408 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a241d476-3083-43b0-b2a5-5c961985a10c');\n",
+              "          const element = document.querySelector('#df-5d9c5177-5e6a-4ada-b9ba-e6fd47ed5408');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -366,7 +366,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-771a616d-54b7-4d21-99b5-c841c5dee30e\">\n",
+              "  <div id=\"df-067547e4-ebab-4149-b0c8-54b4a47ac7ae\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -479,7 +479,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-771a616d-54b7-4d21-99b5-c841c5dee30e')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-067547e4-ebab-4149-b0c8-54b4a47ac7ae')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -530,12 +530,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-771a616d-54b7-4d21-99b5-c841c5dee30e button.colab-df-convert');\n",
+              "          document.querySelector('#df-067547e4-ebab-4149-b0c8-54b4a47ac7ae button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-771a616d-54b7-4d21-99b5-c841c5dee30e');\n",
+              "          const element = document.querySelector('#df-067547e4-ebab-4149-b0c8-54b4a47ac7ae');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -573,31 +573,17 @@
         "print('Prueba:')\n",
         "display(df_test.info())\n",
         "print('Entrenamiento:')\n",
-        "display(df_train.info())\n",
-        "\n",
-        "# Imprimir la cantidad de valores faltantes en cada conjunto de datos\n",
-        "print('\\nValores faltantes:')\n",
-        "print('Prueba:')\n",
-        "display(pd.isnull(df_test).sum())\n",
-        "print('Entrenamiento:')\n",
-        "display(pd.isnull(df_train).sum())\n",
-        "\n",
-        "# Imprimir estadísticas resumidas sobre cada conjunto de datos\n",
-        "print('\\nEstadísticas de los datos:')\n",
-        "print('Prueba:')\n",
-        "display(df_test.describe())\n",
-        "print('Entrenamiento:')\n",
-        "display(df_train.describe())"
+        "display(df_train.info())"
       ],
       "metadata": {
         "id": "QRXqi8BRSExK",
-        "outputId": "1ad406d6-151a-4587-d939-d56ea735010d",
+        "outputId": "430b7d45-74b2-4a79-a29e-493c5b8eb226",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 815
         }
       },
-      "execution_count": 15,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -672,7 +658,29 @@
             ]
           },
           "metadata": {}
-        },
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Imprimir la cantidad de valores faltantes en cada conjunto de datos\n",
+        "print('\\nValores faltantes:')\n",
+        "print('Prueba:')\n",
+        "display(pd.isnull(df_test).sum())\n",
+        "print('Entrenamiento:')\n",
+        "display(pd.isnull(df_train).sum())"
+      ],
+      "metadata": {
+        "id": "b5ekbTHYuwWi",
+        "outputId": "5de300a3-2460-444f-da3f-88b5628e7878",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 520
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
@@ -729,7 +737,29 @@
             ]
           },
           "metadata": {}
-        },
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Imprimir estadísticas resumidas sobre cada conjunto de datos\n",
+        "print('\\nEstadísticas de los datos:')\n",
+        "print('Prueba:')\n",
+        "display(df_test.describe())\n",
+        "print('Entrenamiento:')\n",
+        "display(df_train.describe())"
+      ],
+      "metadata": {
+        "id": "WM_qcizHuxrC",
+        "outputId": "097f6fd5-1549-49c2-be05-41bf8e7fa852",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 652
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
@@ -755,7 +785,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a352916b-34e6-4c1c-8302-77c77196f351\">\n",
+              "  <div id=\"df-3ccee897-e625-4a96-a4d6-18cf460c0ee5\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -859,7 +889,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a352916b-34e6-4c1c-8302-77c77196f351')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3ccee897-e625-4a96-a4d6-18cf460c0ee5')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -910,12 +940,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a352916b-34e6-4c1c-8302-77c77196f351 button.colab-df-convert');\n",
+              "          document.querySelector('#df-3ccee897-e625-4a96-a4d6-18cf460c0ee5 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a352916b-34e6-4c1c-8302-77c77196f351');\n",
+              "          const element = document.querySelector('#df-3ccee897-e625-4a96-a4d6-18cf460c0ee5');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -972,7 +1002,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-24354903-3148-40e2-b540-6d2477a7352a\">\n",
+              "  <div id=\"df-a0550b36-1c4a-4608-bfac-d65e79ff80fe\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1085,7 +1115,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-24354903-3148-40e2-b540-6d2477a7352a')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a0550b36-1c4a-4608-bfac-d65e79ff80fe')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1136,12 +1166,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-24354903-3148-40e2-b540-6d2477a7352a button.colab-df-convert');\n",
+              "          document.querySelector('#df-a0550b36-1c4a-4608-bfac-d65e79ff80fe button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-24354903-3148-40e2-b540-6d2477a7352a');\n",
+              "          const element = document.querySelector('#df-a0550b36-1c4a-4608-bfac-d65e79ff80fe');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1164,204 +1194,6 @@
             ]
           },
           "metadata": {}
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print('Amount of data')\n",
-        "print(df_test.shape)\n",
-        "print(df_train.shape)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "VXEbcwiDIzVo",
-        "outputId": "99c63409-a544-47cf-af3a-8bc56794c009"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Amount of data\n",
-            "(418, 11)\n",
-            "(891, 12)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print('Type of data')\n",
-        "print(df_test.info())\n",
-        "print(df_train.info())"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "qCT0C-hGJCiw",
-        "outputId": "d006e8cd-ac57-49c9-cd92-ceb9eb4c59d2"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Type of data\n",
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 418 entries, 0 to 417\n",
-            "Data columns (total 11 columns):\n",
-            " #   Column       Non-Null Count  Dtype  \n",
-            "---  ------       --------------  -----  \n",
-            " 0   PassengerId  418 non-null    int64  \n",
-            " 1   Pclass       418 non-null    int64  \n",
-            " 2   Name         418 non-null    object \n",
-            " 3   Sex          418 non-null    object \n",
-            " 4   Age          332 non-null    float64\n",
-            " 5   SibSp        418 non-null    int64  \n",
-            " 6   Parch        418 non-null    int64  \n",
-            " 7   Ticket       418 non-null    object \n",
-            " 8   Fare         417 non-null    float64\n",
-            " 9   Cabin        91 non-null     object \n",
-            " 10  Embarked     418 non-null    object \n",
-            "dtypes: float64(2), int64(4), object(5)\n",
-            "memory usage: 36.0+ KB\n",
-            "None\n",
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 891 entries, 0 to 890\n",
-            "Data columns (total 12 columns):\n",
-            " #   Column       Non-Null Count  Dtype  \n",
-            "---  ------       --------------  -----  \n",
-            " 0   PassengerId  891 non-null    int64  \n",
-            " 1   Survived     891 non-null    int64  \n",
-            " 2   Pclass       891 non-null    int64  \n",
-            " 3   Name         891 non-null    object \n",
-            " 4   Sex          891 non-null    object \n",
-            " 5   Age          714 non-null    float64\n",
-            " 6   SibSp        891 non-null    int64  \n",
-            " 7   Parch        891 non-null    int64  \n",
-            " 8   Ticket       891 non-null    object \n",
-            " 9   Fare         891 non-null    float64\n",
-            " 10  Cabin        204 non-null    object \n",
-            " 11  Embarked     889 non-null    object \n",
-            "dtypes: float64(2), int64(5), object(5)\n",
-            "memory usage: 83.7+ KB\n",
-            "None\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print('Missing data')\n",
-        "print(pd.isnull(df_test).sum())\n",
-        "print(pd.isnull(df_train).sum())"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "EhUDqZDaJZXA",
-        "outputId": "7384bfb7-a98c-47e6-d831-7cbaf79c363c"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Missing data\n",
-            "PassengerId      0\n",
-            "Pclass           0\n",
-            "Name             0\n",
-            "Sex              0\n",
-            "Age             86\n",
-            "SibSp            0\n",
-            "Parch            0\n",
-            "Ticket           0\n",
-            "Fare             1\n",
-            "Cabin          327\n",
-            "Embarked         0\n",
-            "dtype: int64\n",
-            "PassengerId      0\n",
-            "Survived         0\n",
-            "Pclass           0\n",
-            "Name             0\n",
-            "Sex              0\n",
-            "Age            177\n",
-            "SibSp            0\n",
-            "Parch            0\n",
-            "Ticket           0\n",
-            "Fare             0\n",
-            "Cabin          687\n",
-            "Embarked         2\n",
-            "dtype: int64\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print('###Dataset statistics###')\n",
-        "print('TEST:')\n",
-        "print(df_test.describe())\n",
-        "print('TRAIN:')\n",
-        "print(df_train.describe())"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7ADHR8ZSJ7lw",
-        "outputId": "2017ed53-0298-4735-fb15-6f7186c73ecf"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "###Dataset statistics###\n",
-            "TEST:\n",
-            "       PassengerId      Pclass         Age       SibSp       Parch        Fare\n",
-            "count   418.000000  418.000000  332.000000  418.000000  418.000000  417.000000\n",
-            "mean   1100.500000    2.265550   30.272590    0.447368    0.392344   35.627188\n",
-            "std     120.810458    0.841838   14.181209    0.896760    0.981429   55.907576\n",
-            "min     892.000000    1.000000    0.170000    0.000000    0.000000    0.000000\n",
-            "25%     996.250000    1.000000   21.000000    0.000000    0.000000    7.895800\n",
-            "50%    1100.500000    3.000000   27.000000    0.000000    0.000000   14.454200\n",
-            "75%    1204.750000    3.000000   39.000000    1.000000    0.000000   31.500000\n",
-            "max    1309.000000    3.000000   76.000000    8.000000    9.000000  512.329200\n",
-            "TRAIN:\n",
-            "       PassengerId    Survived      Pclass         Age       SibSp  \\\n",
-            "count   891.000000  891.000000  891.000000  714.000000  891.000000   \n",
-            "mean    446.000000    0.383838    2.308642   29.699118    0.523008   \n",
-            "std     257.353842    0.486592    0.836071   14.526497    1.102743   \n",
-            "min       1.000000    0.000000    1.000000    0.420000    0.000000   \n",
-            "25%     223.500000    0.000000    2.000000   20.125000    0.000000   \n",
-            "50%     446.000000    0.000000    3.000000   28.000000    0.000000   \n",
-            "75%     668.500000    1.000000    3.000000   38.000000    1.000000   \n",
-            "max     891.000000    1.000000    3.000000   80.000000    8.000000   \n",
-            "\n",
-            "            Parch        Fare  \n",
-            "count  891.000000  891.000000  \n",
-            "mean     0.381594   32.204208  \n",
-            "std      0.806057   49.693429  \n",
-            "min      0.000000    0.000000  \n",
-            "25%      0.000000    7.910400  \n",
-            "50%      0.000000   14.454200  \n",
-            "75%      0.000000   31.000000  \n",
-            "max      6.000000  512.329200  \n"
-          ]
         }
       ]
     },
